# loggerpp

./: CMakeLists.txt  LICENSE.MIT  README.md  build.bat  build.sh
conan/: conanfile.py  conanfile.txt
examples/bench/: CMakeLists.txt  sample.cpp
examples/custom_formatter/: sample.cpp
examples/extend_tags/: CMakeLists.txt  sample.cpp
examples/extend_tags/conan/: conanfile.txt
examples/run_own_thread/: sample.cpp
examples/simple/: sample.cpp
examples/simple/conan/: conanfile.txt
examples/thread_safe/: sample.cpp
include/loggerpp/: file_log_consumer.h  log_base.h  log_dispatcher.h  log_formatter.h  log_level.h  logger.h  noncopyable.h  ordered_queue.h  shared_tags_logger.h  task_queue.h  utils.h  worker.h
include/tools/: log_base.h  log_dispatcher.h  log_formatter.h  log_level.h  logger.h  noncopyable.h  ordered_queue.h  task_queue.h  tools.h  worker.h
include/utils/: bool_t.h  noncopyable.h  optional.h  optional_c++11.h  optional_c++14.h  optional_c++17.h  ordered_queue.h  task_queue.h  utils.h  variant.h  variant_c++11.h  variant_c++17.h  worker.h
tests/: bool_t.cpp  file_log_consumer.cpp  logger.cpp  main.cpp  ordered_queue.cpp  shared_tags_logger.cpp  task_queue.cpp  to_string.cpp  variant.cpp  worker.cpp
